overflow fix

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -27,5 +27,5 @@ body {
 }
 
 .disableScroll {
-    overflow-y: hidden;
+    overflow-y: hidden !important;
 }
